# django-chunk-file-upload

./: .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  manage.py  requirements.txt  setup.cfg
django_chunk_file_upload/: __init__.py  admin.py  app_settings.py  apps.py  constants.py  forms.py  models.py  optimize.py  permissions.py  typed.py  urls.py  utils.py  views.py  widgets.py
django_chunk_file_upload/migrations/: 0001_initial.py  0002_alter_filemanager_options_and_more.py  0003_rename_file_manager_checksum_idx_filemanager_checksum_idx.py
django_chunk_file_upload/static/css/: upload.chunk.css
django_chunk_file_upload/static/js/: jquery-3.7.1.min.js  upload.chunk.js
django_chunk_file_upload/templates/django_chunk_file_upload/: chunked_upload.html
django_chunk_file_upload/templates/django_chunk_file_upload/admin/: add_form.html  base_form.html  change_form.html  submit_line.html
django_chunk_file_upload/templates/django_chunk_file_upload/forms/widgets/: drag_drop_input.html  file_input.html
examples/: manage.py
examples/examples/: asgi.py  settings.py  urls.py  wsgi.py
tests/: settings.py  test_models.py  urls.py
