[metadata]
name = django-chunk-file-upload
version = attr: django_chunk_file_upload.__version__
url = https://github.com/thewebscraping/django-chunk-file-upload
author = Tu Pham
author_email = thetwofarm@gmail.com
description = Django Chunk File Upload is an alternative utility that helps you easily Django's chunked, drag and drop file uploads.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Environment :: Web Environment
    Topic :: Internet
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
keywords =
    python
    django
    django-chunk-file-upload
    django-chunk-upload
    django-chunked-upload
    django-drag-and-drop-file
    django-dropzone
    django-file
    django-file-manager
    django-file-upload
    drag-and-drop
    drag-drop
project_urls =
    Changelog = https://github.com/thewebscraping/django-chunk-file-upload/blob/main/CHANGELOG.rst
    Source = https://github.com/thewebscraping/django-chunk-file-upload

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    Django >= 3.2

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    my_package.tests*

[isort]
indent=4
combine_star=1
combine_as_imports=1
include_trailing_comma=1
multi_line_output=3
lines_after_imports=2
known_django=django
extra_standard_library=types,requests
known_first_party=django_chunk_file_upload
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER


[flake8]
max-line-length = 88
# Black
ignore = E203, W503, E501, E231

[mypy]
mypy_path = .
plugins =
    mypy_django_plugin.main
strict_optional = True
disable_error_code = import-untyped, import-not-found

[mypy.plugins.django-stubs]
django_settings_module = tests.settings
